# scopemask

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  mkdocs.yml
.github/workflows/: docs.yml  go.yml  js.yml  publish-js.yml  publish-python.yml  python.yml  release-go.yml
docs/: changelog.md  golang.md  index.md  js.md  python.md  requirements.txt
fixtures/: parity_vectors.json
go/: .gitignore  README.md  go.mod  mask.go  mask_test.go
js/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/src/: index.ts
js/tests/: mask.test.ts
python/: README.md  pyproject.toml  tox.ini
python/scopemask/: __init__.py  mask.py
python/tests/: test_mask.py
