[project]
name = "scopemask"
dynamic = ["version"]
description = "Scope-bound opaque id masking for integers, strings, and UUIDs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "khan-asfi-reza" }]
keywords = [
    "opaque-id",
    "id-masking",
    "obfuscation",
    "sqids",
    "hashids",
    "uuid",
    "hmac",
    "scope",
    "url-safe",
    "primary-key",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqids>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/khan-asfi-reza/scopemask"
Documentation = "https://khan-asfi-reza.github.io/scopemask/"
Repository = "https://github.com/khan-asfi-reza/scopemask"
Issues = "https://github.com/khan-asfi-reza/scopemask/issues"
Changelog = "https://khan-asfi-reza.github.io/scopemask/changelog/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "scopemask/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["scopemask"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
    "tox>=4.55.1",
    "tox-uv>=1.35.2",
]

[tool.ruff]
line-length = 100
src = ["scopemask", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["scopemask"]
